# flappy_bird

./: Cargo.toml
src/: main.rs
src/config/: mod.rs
src/core/: mod.rs
src/core/assets/: mod.rs
src/core/camera/: camera_systems.rs  mod.rs
src/core/game/: mod.rs
src/core/game/background/: bg_components.rs  bg_systems.rs  mod.rs
src/core/game/bird/: bird_bundles.rs  bird_components.rs  bird_configs.rs  bird_events.rs  bird_resources.rs  bird_systems.rs  mod.rs
src/core/game/collision/: collision_events.rs  collision_systems.rs  mod.rs
src/core/game/pipe/: mod.rs  pipe_bundles.rs  pipe_components.rs  pipe_configs.rs  pipe_resources.rs  pipe_systems.rs
src/core/game/screen_manager/: mod.rs  sm_systems.rs
src/core/game/state/: mod.rs  state_states.rs  state_systems.rs
src/core/game/ui/: mod.rs  ui_components.rs  ui_systems.rs
src/core/game/ui/bundles/: mod.rs  text_bundle.rs
src/core/game/ui/screens/: mod.rs
src/core/game/ui/screens/commom/: containers.rs
src/core/overlay/: mod.rs
src/core/overlay/fps/: fps_systems.rs  mod.rs  systems.rs
src/core/player/: mod.rs  player_systems.rs
src/core/window/: mod.rs  window_systems.rs
